[gd_scene load_steps=14 format=3 uid="uid://djnscj462gkt3"]

[ext_resource type="Texture2D" uid="uid://br6yc3stxxuv2" path="res://Castle of Lost Shadows _ Dark Gothic Pixel Art Background + Entrance Sprites.jpg" id="1_7vrkn"]
[ext_resource type="Script" uid="uid://djsxp1ikks1ww" path="res://main_menu.gd" id="1_fu7sn"]
[ext_resource type="FontFile" uid="uid://mdifhlbc30ml" path="res://Akira Expanded Demo.otf" id="2_fu7sn"]
[ext_resource type="Script" uid="uid://blc5y3r4vkidb" path="res://audio_control.gd" id="4_glbon"]
[ext_resource type="AudioStream" uid="uid://pqcfx31eu4i4" path="res://Attack on Titan OST「YouSeeBIGGIRL_T_T (Instrumental)」- Hiroyuki SAWANO.mp3" id="4_jix8l"]
[ext_resource type="Script" uid="uid://dqy0h0brny8nq" path="res://fullscreen_control.gd" id="6_nlkkf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jix8l"]
texture = ExtResource("1_7vrkn")
modulate_color = Color(0.5211406, 0.5211406, 0.5211405, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1.588, 1.588, 1.588, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_offset = Vector2(0, 3.585)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.6725181, 0.6725181, 0.6725181, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_offset = Vector2(0, 3.585)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.6725181, 0.6725181, 0.6725181, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_offset = Vector2(0, 3.585)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vrkn"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_glbon"]
color = Color(1, 1, 1, 1)
thickness = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jix8l"]
color = Color(0, 0, 0.5137255, 1)
thickness = 7

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu7sn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jix8l")

[node name="mainbuttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.0
offset_top = -3.0
offset_right = 226.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="start" type="Button" parent="mainbuttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.0093103545, 0.0093103545, 0.0093103545, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Start game"

[node name="Settings" type="Button" parent="mainbuttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.0093103545, 0.0093103545, 0.0093103545, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Settings"

[node name="Exit" type="Button" parent="mainbuttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.0093103545, 0.0093103545, 0.0093103545, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="mainbuttons"]
stream = ExtResource("4_jix8l")
autoplay = true
bus = &"music"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -183.0
offset_top = 105.0
offset_right = 194.0
offset_bottom = 249.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0.44901258, 0.39046437, 0.26084515, 1)
theme_override_constants/line_spacing = -16
theme_override_constants/paragraph_spacing = 15
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 11
theme_override_fonts/font = ExtResource("2_fu7sn")
theme_override_font_sizes/font_size = 43
text = "Demon King
of 
Salvation"
horizontal_alignment = 1

[node name="settings" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.0
offset_top = -72.5
offset_right = 263.0
offset_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="settings"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 59.5
grow_horizontal = 2
theme_override_font_sizes/font_size = 41
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="back" type="Button" parent="settings"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -65.0
offset_right = 181.0
offset_bottom = -15.0
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.0093103545, 0.0093103545, 0.0093103545, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.0
offset_top = -51.75
offset_right = 161.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 21

[node name="HBoxContainer" type="HBoxContainer" parent="settings/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="settings/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Music Volume"

[node name="audiocontrol" type="HSlider" parent="settings/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxLine_glbon")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_jix8l")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_jix8l")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("4_glbon")
audio_bus_name = "music"

[node name="fullscreen_control" type="CheckButton" parent="settings/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
button_pressed = true
text = "Full Screen"
script = ExtResource("6_nlkkf")

[connection signal="pressed" from="mainbuttons/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="mainbuttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="mainbuttons/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="settings/back" to="." method="_on_back_settings_pressed"]
[connection signal="value_changed" from="settings/VBoxContainer/HBoxContainer/audiocontrol" to="settings/VBoxContainer/HBoxContainer/audiocontrol" method="_on_value_changed"]
[connection signal="toggled" from="settings/VBoxContainer/fullscreen_control" to="settings/VBoxContainer/fullscreen_control" method="_on_toggled"]
